-----------
Performance Improvements
Switches now show the message associated with them and not the dimmer.  i.e. locked, on, off, etc
Added a yellow border for on to make them look more distinguished.
Fixed an issue with the data load from ISY where some of the devices weren't going into the correct categories.
Added an options menu with the option to disable the view scrolling feature.

Version 1.5.2
-----------
Other UI elements now refresh after scenes are turned on/off or programs are run.
Programs in right menu now shows all folders and the programs underneath them even if they're nested folders(it does flatten the structure).

Version 1.5.1
-----------
IMPORTANT: Please remove the app and re-install.  There were some deeper changes that had to be made for some of the following fixes.

Added a sensor view 
Added devices that are sensors to the sensor view when querying an ISY
Dimmers, switches and sensors have their own templates
Fixed issue when existing folders could not be removed after being added (Might require a remove of the app and re-install)
Moved programs onto the right menu and made them generic for more of a setup look
Added runThen and runElse buttons for programs.
Programs can now be added like any other device into any folder (run is assumed for now).
Android won't auto focus now and bring up the keyboard to search each time on the Edit Mode views.
Android Exit button is now fixed.
Fixed a few crashing issues when going between menus.


Version 1.5
-----------
- Scene buttons now give feedback when pressed.
- Switches for http/https and remote/local network
- Changed name of default folder
- ISY portal is the default remote connection
- Added About page with version 
- Fixed issue where button tracking wasn't working for some ISY devices.
- Changed the add icon to green.  Isn't it pretty?
- You can now add new folders or existing folders to a view.
- When adding devices you can now click on them to add/remove them from the same page.