@@ -8,6 +8,7 @@ Switches now show the message associated with them and not the dimmer.  i.e. loc
 Added a yellow border for on to make them look more distinguished.
 Fixed an issue with the data load from ISY where some of the devices weren't going into the correct categories.
 Added an options menu with the option to disable the view scrolling feature.
+Flash a yellow border around the scene buttons when pressed on/off
 
 Version 1.5.2
 -----------
